# zenml-aws-stepfunctions-orchestrator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  hello.py  pyproject.toml  run  run.py  run.sh
configs/: training_pipeline.yaml
infra/: README.md  app.py  run.sh
infra/aws-cdk/: README.md  app.py  cdk.context.json  pyproject.toml  run.sh
infra/aws-cdk/src/aws_cdk_infra/: aws_batch_stack.py  aws_stepfunction_stack.py  infra_stack.py
infra/aws-cdk/src/infra/: __init__.py  aws_batch_stack.py  infra_stack.py
infra/aws-cdk/tests/unit/: test_infra_stack.py
infra/pulumi/: Pulumi.yaml  Pulumi.zenml-stack-step-functions.yaml  Pulumi.zenml_local_orchestrator.yaml  README.md  __main__.py  pyproject.toml
infra/pulumi/sdks/zenml/: pyproject.toml
infra/pulumi/sdks/zenml/pulumi_zenml/: README.md  __init__.py  _inputs.py  _utilities.py  get_server.py  get_service_connector.py  get_stack.py  get_stack_component.py  outputs.py  provider.py  pulumi-plugin.json  service_connector.py  stack.py  stack_component.py
infra/pulumi/sdks/zenml/pulumi_zenml/config/: __init__.pyi  vars.py
infra/pulumi/src/infra/: __init__.py
infra/pulumi/src/pulumi_zenml_infra/: __init__.py  aws_resources.py  zenml_service_connectors.py  zenml_stack_components.py
infra/tests/unit/: test_infra_stack.py
orchestrator/: __init__.py  my_aws_orchestrator.py  my_aws_orchestrator_flavor.py  my_docker_orchestrator.py  my_docker_orchestrator_flavor.py
pipelines/: __init__.py  pyproject.toml  run.py  simple_pipeline.py  sklearn_pipeline.py
pipelines/configs/: training_pipeline.yaml
pipelines/steps/evaluator/: evaluator_step.py
pipelines/steps/importer/: importer_step.py
pipelines/steps/trainer/: trainer_step.py
sfn-orchestrator/: README.md  batch.py  pyproject.toml  state_machine.py
sfn-orchestrator/src/sfn_orchestrator/: batch_job_definitions.py  my_aws_orchestrator_flavor.py  my_docker_orchestrator.py  my_docker_orchestrator_flavor.py  sfn_orchestrator.py  sfn_orchestrator_flavor.py
steps/: __init__.py
steps/evaluator/: evaluator_step.py
steps/importer/: importer_step.py
steps/trainer/: trainer_step.py
