[project]
name = "pulumi-zenml-infra"
version = "0.1.0"
description = "Pulumi infrastructure for ZenML"
readme = "README.md"
authors = [{ name = "phitoduck", email = "eric.riddoch@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-aws>=6.0.2,<7.0.0",
    "pulumi-zenml",
]

[tool.uv.sources]
pulumi-zenml = { path = "sdks/zenml" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pulumi_zenml_infra"]

[tool.hatch.metadata]
allow-direct-references = true
