[project]
name = "pulumi_zenml"
description = "A Pulumi provider dynamically bridged from zenml."
dependencies = [
  "parver>=0.2.1",
  "pulumi>=3.142.0,<4.0.0",
  "semver>=2.8.1",
  "typing-extensions>=4.11; python_version < \"3.11\"",
]
readme = "README.md"
requires-python = ">=3.9"
version = "1.1.3"
[project.urls]
Repository = "https://github.com/zenml-io/terraform-provider-zenml"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool]
[tool.setuptools]
[tool.setuptools.package-data]
pulumi_zenml = ["py.typed", "pulumi-plugin.json"]
